<resources>
    <string name="app_name">Contact App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myName">"Swapnanil Kr saikia"</string>
    <string name="myage">Age: 24</string>
    <string name="myDes">Works in Sapient, Software Engineer From Assam</string>
    <string name="myPhon">Ph: +242422252</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="des">Tell About You</string>
    <string name="phone">Phone</string>
    <string name="profile">Profile</string>
    <string name="submit">Insert User</string>
    <string name="file">"open Gallery"</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about">About</string>
    <string name="delete">Delete</string>
    <string name="call">Call</string>
    <string name="share">Share</string>
    <string name="mes">Message</string>


    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="title_about">"About"</string>
    <string name="about">"It is a Contact App. You canrtore phone number and details of your known ones"</string>
    <string name="close_drawer">Close Navigation</string>
    <string name="open_drawer">Open Navigation</string>
    <string name="update">Update</string>

    <string name="popup">"..."</string>


</resources>